--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -140,8 +140,8 @@
 
             </p>
 
-            <h3>所属</h3>
-            東洋大学理工学部生体医工学科（2023年4月より）<br>
+            <h3>現在の所属</h3>
+            東洋大学生命科学部生体医工学科<br>
 
             <h3>研究内容</h3>
             材料化学やマイクロ流体科学に立脚した，微小流体制御材料の構築とデバイス・センサ応用
@@ -156,7 +156,8 @@
 
             <h3>経歴</h3>
             <ul>
-                <li>2023-現在: 東洋大学理工学部生体医工学科 准教授</li>
+                <li>2024-現在: 東洋大学生命科学部生体医工学科 准教授（学部再編により所属変更）</li>
+                <li>2023-2024: 東洋大学理工学部生体医工学科 准教授</li>
                 <li>2022-2023: 東京理科大学理学部第一部応用物理学科 助教（木下健太郎教授 研究室）</li>
                 <li>2019-2022: 東北大学材料科学高等研究所（AIMR） 助教（熊谷明哉准教授 グループ）</li>
                 <li>2015-2019: 東北大学工学研究科ファインメカニクス専攻　特任助教（西澤松彦教授 研究室）</li>
